fix(Button): border still visible

--- a/styles/components/general/button.scss
+++ b/styles/components/general/button.scss
@@ -9,6 +9,8 @@
 
 	transition: all 0.2s ease;
 
+	border: none;
+
 	&:focus {
 		outline: none;
 	}
