--- a/styles/components/general/navbar.scss
+++ b/styles/components/general/navbar.scss
@@ -185,7 +185,7 @@
 	padding-left: 20px;
 	padding-right: 20px;
 
-	> a.button {
+	> .button {
 		width: 100%;
 		text-align: center;
 
